--- a/src/main/resources/archetype-resources/__rootArtifactId__-web/src/main/resources/application-dev.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-web/src/main/resources/application-dev.yml
@@ -1,1 +1,12 @@
-# 开发环境
+###  开发环境  ###
+
+# Tomcat相关配置
+server:
+  port: 8888
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:test
+      username: root
+      password: test
+
