--- a/src/main/resources/archetype-resources/__rootArtifactId__-web/src/main/resources/application.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-web/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 #######################################################
 server:
   servlet:
-    context-path: /api    # 项目访问路径
+    context-path: /    # 项目访问路径
   tomcat:
     max-threads: 1000     # tomcat线程池大小设置
     min-spare-threads: 30 # tomcat初始化线程数量
