--- a/src/main/resources/archetype-resources/__rootArtifactId__-web/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-web/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>${artifactId}</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>${rootArtifactId}-dal</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -40,6 +46,11 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
 
     </dependencies>
