增加parent子工程管理jar

--- a/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -6,10 +6,12 @@
 
     <parent>
         <groupId>${groupId}</groupId>
-        <artifactId>${rootArtifactId}</artifactId>
+        <artifactId>${rootArtifactId}-parent</artifactId>
         <version>${version}</version>
+        <relativePath>../${rootArtifactId}-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>${artifactId}</artifactId>
+    <version>${version}</version>
 
 </project>
