--- a/src/main/resources/archetype-resources/__rootArtifactId__-web/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-web/pom.xml
@@ -5,11 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>${groupId}</groupId>
-        <artifactId>${rootArtifactId}</artifactId>
+        <artifactId>${rootArtifactId}-parent</artifactId>
         <version>${version}</version>
+        <relativePath>../${rootArtifactId}-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>${artifactId}</artifactId>
+    <version>${version}</version>
+    <packaging>jar</packaging>
 
     <dependencies>
 
