--- a/src/main/resources/archetype-resources/__rootArtifactId__-parent/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-parent/pom.xml
@@ -68,7 +68,12 @@
             </dependency>
             <dependency>
                 <groupId>${groupId}</groupId>
-                <artifactId>${rootArtifactId}-service</artifactId>
+                <artifactId>${rootArtifactId}-adapter</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${groupId}</groupId>
+                <artifactId>${rootArtifactId}-biz</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
@@ -121,6 +126,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.58</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>3.14.1</version>
             </dependency>
 
         </dependencies>
